# projektit

./: README.md
Python/: Alcoholic_spider.py  Lotto_sim_with_interface.py  MineSweeper_game.py  Tietoa_projekteista.txt  requirements.txt
Python/Alcoholic_spider/: Alcoholic_spider.py  alcohol_prices_11_2023.csv  alcohol_prices_12_2023.csv  visualize_data.py  webdrive_config.py
Python/Alcoholic_spider/Price_data/: alcohol_prices_1_2024.csv  alcohol_prices_5_2025.csv  alcohol_prices_6_2025.csv
Python/Data Analysis - Pandas/Data_Science-Pandas-1/: Data_printing_test.py  Pandas_Data_Analysis.py
Python/Data Analysis - Pandas/Data_science-Pandas-2/: DataScience-MinimumWage.py  MinimumWage-UTF8.csv
Python/Data Analysis - Pandas/Data_science-Pandas-3/: diamonds_pandas.py
Python/ML-2048/: 2048.py  2048_model.pt  game2048.py  pytorch_training.py  tensorflow_training.py
Python/ML-Pong/: Pong_env.py  Pong_loading.py  Pong_play_env.py  Pong_train_env.py  Pong_training.py
Python/ML-Pong/logs/Pong-1/1701784901/: monitor.csv
Python/ML-snake/: custom_environment.py  original_snake_game.py  snek_game_loading.py  snek_game_training.py
Python/Pong/: Pong_env.py  Pong_loading.py  Pong_training.py
Python/brawlhalla_ml/: brawlhalla_ml.py  train_agent.py
Rust/: Tietoa_projekteista.txt
Rust/rust_raytracer/: Cargo.toml
Rust/rust_raytracer/src/: camera.rs  main.rs
Rust/sorting_algo/: .gitignore  Cargo.toml
Rust/sorting_algo/src/: main.rs
java/: .gitignore  Tietoa_projekteista.txt
java/WeatherApp/: pom.xml  search_history.json
(+3427 files in other folders)
