[package]
edition = "2021"
name = "rust_raytracer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_winit_platform = "0.22.0"
env_logger = "0.11.3"
glam = "0.27.0"
rand = "0.8.5"
rayon = "1.10.0"
winit = "0.29.15"
